--- a/frontend-bar/angular.json
+++ b/frontend-bar/angular.json
@@ -4,6 +4,18 @@
   "newProjectRoot": "projects",
   "projects": {
     "frontend-bar": {
+      "i18n": {
+        "sourceLocale": {
+          "code": "en",
+          "baseHref": "/"
+        },
+        "locales": {
+          "es": {
+            "translation": "src/locale/messages.es.xlf",
+            "baseHref": "/es/"
+          }
+        }
+      },
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
