--- a/frontend-bar/package.json
+++ b/frontend-bar/package.json
@@ -11,10 +11,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.2.1",
-    "@angular/common": "^17.1.0",
+    "@angular/common": "^17.2.1",
     "@angular/compiler": "^17.1.0",
     "@angular/core": "^17.1.0",
     "@angular/forms": "^17.1.0",
+    "@angular/localize": "^17.2.1",
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/platform-server": "^17.1.0",
