--- a/frontend-bar/package.json
+++ b/frontend-bar/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.2.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "ngx-toastr": "^18.0.0",
