--- a/frontend-bar/package.json
+++ b/frontend-bar/package.json
@@ -11,11 +11,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.2.1",
+    "@angular/cdk": "^17.3.5",
     "@angular/common": "^17.2.1",
     "@angular/compiler": "^17.1.0",
     "@angular/core": "^17.1.0",
     "@angular/forms": "^17.1.0",
     "@angular/localize": "^17.2.1",
+    "@angular/material": "^17.3.5",
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/platform-server": "^17.1.0",
