--- a/frontend-bar/package.json
+++ b/frontend-bar/package.json
@@ -11,13 +11,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.2.1",
-    "@angular/cdk": "^17.3.5",
+    "@angular/cdk": "^17.3.6",
     "@angular/common": "^17.2.1",
     "@angular/compiler": "^17.1.0",
     "@angular/core": "^17.1.0",
     "@angular/forms": "^17.1.0",
     "@angular/localize": "^17.2.1",
     "@angular/material": "^17.3.5",
+    "@angular/material-moment-adapter": "^17.3.6",
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/platform-server": "^17.1.0",
@@ -37,7 +38,12 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "bootstrap": "^5.3.2",
+    "date-fns": "^3.6.0",
     "express": "^4.18.2",
+    "moment": "^2.30.1",
+    "ngx-bootstrap": "^12.0.0",
+    "ngx-datetime-picker": "^3.0.0",
+    "ngx-material-timepicker": "^13.1.1",
     "ngx-toastr": "^18.0.0",
     "preact": "^10.20.1",
     "rxjs": "~7.8.0",
