--- a/frontend-bar/package.json
+++ b/frontend-bar/package.json
@@ -38,6 +38,7 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
     "express": "^4.18.2",
     "moment": "^2.30.1",
