--- a/server-bar/package.json
+++ b/server-bar/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
+    "start": "node index.js",
     "typescript": "tsc --watch"
   },
   "author": "BrandonEscudero-DavidOrlando",
